Update README with project details and instructions
Added detailed project overview, features, technologies, installation steps, and testing instructions.